--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/style/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>SPECIAL FOR YOU</title>
 </head>
 <body>
-  <audio class="audio" src="/assets/audio/" autoplay type="audio"
-    loop=""></audio>
+  <audio class="audio" src="/assets/audio/" autoplay loop></audio>
   <div class="body">
     <div id="waktu">
       <h1></h1>
@@ -57,7 +56,6 @@
       </div>
     </div>
 
-
     <div id="button">
       <button class="goyang mulai">Mulai</button>
       <button class="goyang hilang1" style="display: none;">Buka pesannya</button>
@@ -65,7 +63,7 @@
     </div>
   </div>
   <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-  <script src="/assets/js/waktuIndo.js"></script>
-  <script src="/assets/js/script.js"></script>
+  <script src="waktuIndo.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
