--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="messege-box messege-box1 kelip">
       <div class="notif-wa">
         <div class="left-header">
-          <img src="/assets/img/wa.png" />
+          <img src="wa.png" />
           <p>WHATSAPP</p>
         </div>
         <div class="right-header">
@@ -39,7 +39,7 @@
     <div class="messege-box messege-box2 kelip">
       <div class="notif-wa">
         <div class="left-header">
-          <img src="/assets/img/wa.png" />
+          <img src="wa.png" />
           <p>WHATSAPP</p>
         </div>
         <div class="right-header">
